fixed alignment of contact icons

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -31,7 +31,7 @@
   justify-content: center;
 }
 
-.navLinks {
-  width: 25px;
-  height: 25px;
+.navLinks:hover {
+  color: #bf7373;
+  transition: all 0.5s;
 }
