--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -54,14 +54,8 @@
   justify-content: center;
 }
 
-.navLinks {
-  width: 25px;
-  height: 25px;
-}
-
 .navLinks:hover {
-  filter: invert(47%) sepia(38%) saturate(414%) hue-rotate(314deg)
-    brightness(103%) contrast(104%);
+  color: #bf7373;
   transition: all 0.5s;
 }
 
